--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>arweave SCP</title>
     <meta name="description" content="arweave SCP" />
-    <meta content="arweave SCP" name="keywords" />
+    <meta content="arweave SCP" name="arweave SCP" />
   </head>
   <body>
     <div id="app"></div>
