--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>arweave SCP</title>
-    <meta name="description" content="arweave SCP" />
-    <meta content="arweave SCP" name="arweave SCP" />
+    <title>Arweave SCP Ventures</title>
+    <meta name="description" content="Arweave SCP Ventures" />
+    <meta content="arweave SCP" name="Arweave SCP Ventures" />
   </head>
   <body>
     <div id="app"></div>
